# Stockfish-Multiplatform

./: .gitignore  CLAUDE.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  sonar-project.properties
.github/workflows/: check.yml  formatting.yml  integration-test.yml  pr_name_check.yml  publish.yml  sonar.yml
gradle/: libs.versions.toml
integration-tests/: build.gradle.kts
integration-tests/karma.config.d/: timeout.js
integration-tests/src/commonTest/kotlin/fr/axl_lvy/stockfish_multiplatform/integration/: BasicIntegrationTest.kt
stockfish-multiplatform/: build.gradle.kts
stockfish-multiplatform-lite/: build.gradle.kts
stockfish-multiplatform-lite/src/androidMain/cpp/: CMakeLists.txt
stockfish-multiplatform-lite/src/jvmMain/cpp/: CMakeLists.txt
stockfish-multiplatform/cpp/: bridge.cpp  ios_bridge.cpp  ios_bridge.h
stockfish-multiplatform/karma.config.d/: sharedArrayBuffer.js  timeout.js
stockfish-multiplatform/src/androidMain/: AndroidManifest.xml
stockfish-multiplatform/src/androidMain/cpp/: CMakeLists.txt
stockfish-multiplatform/src/androidMain/kotlin/: AndroidStockfishEngine.kt  StockfishEngineFactory.android.kt  StockfishMultiplatformInitializer.kt
stockfish-multiplatform/src/commonMain/kotlin/: RawEngine.kt  StockfishEngine.kt  StockfishEngineFactory.kt  UciParser.kt
stockfish-multiplatform/src/commonTest/kotlin/: FakeRawEngine.kt  StockfishEngineConcurrencyTest.kt  StockfishEngineTest.kt  StockfishIntegrationTest.kt  UciParserTest.kt
stockfish-multiplatform/src/iosMain/cpp/: CMakeLists.txt
stockfish-multiplatform/src/iosMain/kotlin/: IosStockfishEngine.kt  StockfishEngineFactory.ios.kt
stockfish-multiplatform/src/iosSimulatorArm64Main/kotlin/: StockfishEngineFactory.iosSimulatorArm64.kt
stockfish-multiplatform/src/iosX64Main/kotlin/: StockfishEngineFactory.iosX64.kt
stockfish-multiplatform/src/jvmCommon/kotlin/: JniStockfishEngine.kt
stockfish-multiplatform/src/jvmMain/cpp/: CMakeLists.txt
stockfish-multiplatform/src/jvmMain/kotlin/: JvmStockfishEngine.kt  StockfishEngineFactory.jvm.kt
stockfish-multiplatform/src/nativeInterop/cinterop/: stockfish.def
stockfish-multiplatform/src/wasmJsMain/kotlin/: StockfishEngineFactory.wasmJs.kt  WasmStockfishEngine.kt
